@@ -1,5 +1,9 @@
 package frc.robot.auto_align.field_calibration;
 
+import static java.util.Comparator.comparingDouble;
+
+import com.google.common.collect.Comparators;
+import com.google.common.collect.ImmutableList;
 import dev.doglog.DogLog;
 import edu.wpi.first.math.MathUtil;
 import edu.wpi.first.math.geometry.Pose2d;
@@ -13,9 +17,7 @@ import frc.robot.lights.LightsState;
 import frc.robot.lights.LightsSubsystem;
 import frc.robot.localization.LocalizationSubsystem;
 import java.util.Arrays;
-import java.util.Comparator;
-import java.util.List;
-import java.util.stream.Stream;
+import java.util.Collections;
 
 /**
  * Logs useful diagnostics to validate scoring setpoints during field calibration. Enabled with the
@@ -35,8 +37,8 @@ public class FieldCalibrationUtil {
   private static final double TRANSLATION_TOLERANCE = 0.05;
   private static final double HEADING_TOLERANCE = 1;
 
-  private static final List<ReefPipeLevel> LEVELS =
-      List.of(ReefPipeLevel.L2, ReefPipeLevel.L3, ReefPipeLevel.L4);
+  private static final ImmutableList<ReefPipeLevel> LEVELS =
+      ImmutableList.of(ReefPipeLevel.L2, ReefPipeLevel.L3, ReefPipeLevel.L4);
 
   private static Summary createSummary(
       ElevatorState wantedElevator,
@@ -129,7 +131,7 @@ public class FieldCalibrationUtil {
     var anyOk = false;
 
     for (var level : LEVELS) {
-      var prefix = "FieldCalibration/Best/" + level.toString();
+      var prefix = "FieldCalibration/Best/" + level;
       var bestScoringPosition = getBestScoringPosition(level);
       DogLog.log(prefix + "/Alliance", bestScoringPosition.isRedAlliance() ? "Red" : "Blue");
       DogLog.log(prefix + "/Pipe", bestScoringPosition.pipe());
@@ -152,7 +154,7 @@ public class FieldCalibrationUtil {
     for (var pipe : ReefPipe.values()) {
       for (var level : LEVELS) {
         DogLog.log(
-            "FieldCalibration/" + allianceLabel + "/" + pipe.toString() + "/" + level.toString(),
+            "FieldCalibration/" + allianceLabel + "/" + pipe + "/" + level,
             pipe.getPose(level, isRedAlliance));
       }
     }
@@ -164,39 +166,35 @@ public class FieldCalibrationUtil {
 
     var robotPose = localization.getPose();
 
-    var bestPipe =
-        Stream.of(bestRed, bestBlue)
-            .min(
-                Comparator.comparingDouble(
-                        (ScoringPosition scoringPosition) ->
-                            scoringPosition
-                                .getPose(level)
-                                .getTranslation()
-                                .getDistance(robotPose.getTranslation()))
-                    .thenComparingDouble(
-                        (ScoringPosition scoringPosition) ->
-                            Math.abs(
-                                robotPose
-                                    .getRotation()
-                                    .minus(scoringPosition.getPose(level).getRotation())
-                                    .getRadians())))
-            .orElseThrow();
-
-    return bestPipe;
+    return Comparators.min(
+        bestRed,
+        bestBlue,
+        comparingDouble(
+                (ScoringPosition scoringPosition) ->
+                    scoringPosition
+                        .getPose(level)
+                        .getTranslation()
+                        .getDistance(robotPose.getTranslation()))
+            .thenComparingDouble(
+                (ScoringPosition scoringPosition) ->
+                    Math.abs(
+                        robotPose
+                            .getRotation()
+                            .minus(scoringPosition.getPose(level).getRotation())
+                            .getRadians())));
   }
 
   private ScoringPosition getBestScoringPipe(boolean isRedAlliance) {
     var robotTranslation = localization.getPose().getTranslation();
 
     var bestPipe =
-        Arrays.stream(ReefPipe.values())
-            .min(
-                Comparator.comparingDouble(
-                    pipe ->
-                        pipe.getPose(ReefPipeLevel.L4, isRedAlliance)
-                            .getTranslation()
-                            .getDistance(robotTranslation)))
-            .orElseThrow();
+        Collections.min(
+            Arrays.asList(ReefPipe.values()),
+            comparingDouble(
+                pipe ->
+                    pipe.getPose(ReefPipeLevel.L4, isRedAlliance)
+                        .getTranslation()
+                        .getDistance(robotTranslation)));
 
     return new ScoringPosition(bestPipe, isRedAlliance);
   }
