@@ -1,10 +1,10 @@
 package frc.robot.robot_manager;
 
+import com.google.common.collect.ImmutableList;
 import edu.wpi.first.wpilibj2.command.Command;
 import edu.wpi.first.wpilibj2.command.Commands;
 import edu.wpi.first.wpilibj2.command.Subsystem;
 import frc.robot.robot_manager.ground_manager.GroundManager;
-import java.util.List;
 
 public class RobotCommands {
   private final GroundManager groundManager;
@@ -18,12 +18,12 @@ public class RobotCommands {
     this.robot = robot;
 
     var requirementsList =
-        List.of(groundManager.deploy, groundManager.intake, groundManager.singulator);
+        ImmutableList.of(groundManager.deploy, groundManager.intake, groundManager.singulator);
     gmRequirements = requirementsList.toArray(Subsystem[]::new);
-    requirementsList = List.of(robot.elevator, robot.arm, robot.claw, robot.climber);
+    requirementsList = ImmutableList.of(robot.elevator, robot.arm, robot.claw, robot.climber);
     rmRequirements = requirementsList.toArray(Subsystem[]::new);
     requirementsList =
-        List.of(
+        ImmutableList.of(
             robot.elevator,
             robot.arm,
             robot.claw,
